tests/NormalTests/paczka1/small_fuzzy/35903829.err
Error in line 1: 39vDo5 A376 17,6
Error in line 3: 39vDo5 A765 0,3
